--- a/2022-rust/Cargo.toml
+++ b/2022-rust/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aoc-common-rs = { path = "../common-rust" }
 clap = { version = "4.0.29", features = ["derive"] }
 either = "1.8.0"
 itertools = "0.10.5"
