--- a/common-rust/Cargo.toml
+++ b/common-rust/Cargo.toml
@@ -1,15 +1,11 @@
 [package]
-name = "aoc23-rs"
+name = "aoc-common-rs"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aoc-common-rs = { path = "../common-rust" }
-clap = { version = "4.4.10", features = ["derive"] }
-either = "1.9.0"
 itertools = "0.12.0"
-lazy_static = "1.4.0"
 nom = "7.1.3"
 num-traits = "0.2.17"
