--- a/2024-rust/Cargo.toml
+++ b/2024-rust/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "aoc-common-rs"
+name = "aoc24-rs"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aoc-common-rs = { path = "../common-rust" }
+clap = { version = "4.5.21", features = ["derive"] }
 itertools = "0.13.0"
 nom = "7.1.3"
-num-traits = "0.2.17"
