--- a/2025-rust/Cargo.toml
+++ b/2025-rust/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2024"
 [dependencies]
 aoc-common-rs = { path = "../common-rust" }
 clap = { version = "4.5.53", features = ["derive"] }
+ilog = "1.0.1"
 itertools = "0.14.0"
 nom = "8.0.0"
